--- a/package.json
+++ b/package.json
@@ -13,11 +13,24 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "just-debounce-it": "^3.2.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.0.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.30.0",
+    "eslint-config-standard-with-typescript": "^24.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.11",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
 }
